src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccTypeNew__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalAccType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Priority__c</fullName>
        <inlineHelpText>This allows the BizDev team to rank accounts to help prioritize efforts.</inlineHelpText>
        <label>Account Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Sub_Vertical__c</fullName>
        <label>Account Sub-Vertical (If Type is Owner)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Big Box</fullName>
                </value>
                <value>
                    <fullName>Boutique</fullName>
                </value>
                <value>
                    <fullName>Chain</fullName>
                </value>
                <value>
                    <fullName>Charter Schools</fullName>
                </value>
                <value>
                    <fullName>Country Club</fullName>
                </value>
                <value>
                    <fullName>For Profit</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Government Leased</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>House of Worship</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Medical Office</fullName>
                </value>
                <value>
                    <fullName>Multifamily</fullName>
                </value>
                <value>
                    <fullName>Multi-Tenant</fullName>
                </value>
                <value>
                    <fullName>National Flag</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Owner/User</fullName>
                </value>
                <value>
                    <fullName>Parking Garage</fullName>
                </value>
                <value>
                    <fullName>Private Higher Ed</fullName>
                </value>
                <value>
                    <fullName>Private K-12</fullName>
                </value>
                <value>
                    <fullName>Regional Hospital</fullName>
                </value>
                <value>
                    <fullName>Regional Mall</fullName>
                </value>
                <value>
                    <fullName>Resort</fullName>
                </value>
                <value>
                    <fullName>Senior Housing</fullName>
                </value>
                <value>
                    <fullName>Single Tenant</fullName>
                </value>
                <value>
                    <fullName>Strip Mall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Affiliate_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the link to the active agreement.</inlineHelpText>
        <label>Active Affiliate Agreement</label>
        <referenceTo>Affliate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aggregate_value_of_income_properties__c</fullName>
        <label>Aggregate value of income properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <inlineHelpText>This indicates whether the Property Owner was recently subject to bankruptcy proceedings.</inlineHelpText>
        <label>Bankruptcy?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_Insurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bond Insurer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Bond Insurer)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Approved_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CF Approved Contractor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Lead_Source__c</fullName>
        <label>CF Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CF Trained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanFund_Loan_Program__c</fullName>
        <label>CleanFund Loan Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Transitional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <description>The current status of the client.</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Contact</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor_Bond_Amount__c</fullName>
        <label>Contractor Bond Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor_Bond_Number_Effective_Date__c</fullName>
        <label>Contractor Bond Number Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_Bond_Number_Expiration_Date__c</fullName>
        <label>Contractor Bond Number Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contractor_Bond_Number__c</fullName>
        <label>Contractor Bond Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_License_Number__c</fullName>
        <label>Contractor License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Pending_Disciplinary_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor Pending Disciplinary Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractor_Worker_s_Comp_Policy_Number__c</fullName>
        <label>Contractor Worker&apos;s Comp Policy Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;US&quot;</defaultValue>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Date_Formed__c</fullName>
        <inlineHelpText>This is the date that the Property Owner&apos;s entity was formed.</inlineHelpText>
        <label>Entity Date Formed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Filling__c</fullName>
        <inlineHelpText>This is the filing number of the Property Owner&apos;s entity.</inlineHelpText>
        <label>Entity Filling #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_State__c</fullName>
        <inlineHelpText>This is the state where the Property Owner is formed.</inlineHelpText>
        <label>Entity State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Status__c</fullName>
        <inlineHelpText>This indicates whether the Property Owner&apos;s entity is listed as &quot;Active&quot;.</inlineHelpText>
        <label>Entity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Sub_Type__c</fullName>
        <inlineHelpText>This is the entity subtype for the Property Owner</inlineHelpText>
        <label>Entity Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Entity_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint Tenants</fullName>
                </value>
                <value>
                    <fullName>General Partnership (GP)</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership (LP)</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership (LLP)</fullName>
                </value>
                <value>
                    <fullName>Joint Venture</fullName>
                </value>
                <value>
                    <fullName>Single Member LLC</fullName>
                </value>
                <value>
                    <fullName>Multiple Member LLC</fullName>
                </value>
                <value>
                    <fullName>Professional Limited Liability Company (PLLC)</fullName>
                </value>
                <value>
                    <fullName>S Corp</fullName>
                </value>
                <value>
                    <fullName>C Corp</fullName>
                </value>
                <value>
                    <fullName>B Corp</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Revocable</fullName>
                </value>
                <value>
                    <fullName>Irrevocable</fullName>
                </value>
                <value>
                    <fullName>QTIP Trust</fullName>
                </value>
                <value>
                    <fullName>GST Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Tax_ID__c</fullName>
        <inlineHelpText>This is the Social Security Number or Tax Identification Number of the Property Owner.</inlineHelpText>
        <label>Entity Tax ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <inlineHelpText>If this account record represents a property owner, or some entity connected to an opportunity.  Then the entity information should be filled in.</inlineHelpText>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalPar_Worker_s_Comp_Policy_Number__c</fullName>
        <label>Contractor Worker&apos;s Comp Policy Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalPart_Bond_Number_Effective_Date__c</fullName>
        <label>Contractor Bond Number Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalPartyCitations_Noted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor Citations Noted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalParty_Bond_Amount__c</fullName>
        <label>Contractor Bond Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExternalParty_Bond_Effective_Date__c</fullName>
        <label>Contractor Bond Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalParty_Bond_Number__c</fullName>
        <label>Contractor Bond Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalParty_Citation_Number__c</fullName>
        <label>Contractor Citation Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalParty_Citation_Status__c</fullName>
        <label>Contractor Citation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalParty_Classifications__c</fullName>
        <label>Contractor Classifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-2 - Insulation and Acoustical Contractor</fullName>
                </value>
                <value>
                    <fullName>C-4 - Boiler, Hot Water Heating and Steam Fitting Contractor</fullName>
                </value>
                <value>
                    <fullName>C-5 - Framing and Rough Carpentry Contractor</fullName>
                </value>
                <value>
                    <fullName>C-6 - Cabinet, Millwork and Finish Carpentry Contractor</fullName>
                </value>
                <value>
                    <fullName>C-7 - Low Voltage Systems Contractor</fullName>
                </value>
                <value>
                    <fullName>C-8 - Concrete Contractor</fullName>
                </value>
                <value>
                    <fullName>C-9 - Drywall Contractor</fullName>
                </value>
                <value>
                    <fullName>C10 - Electrical Contractor</fullName>
                </value>
                <value>
                    <fullName>C11 - Elevator Contractor</fullName>
                </value>
                <value>
                    <fullName>C12 - Earthwork and Paving Contractors</fullName>
                </value>
                <value>
                    <fullName>C13 - Fencing Contractor</fullName>
                </value>
                <value>
                    <fullName>C15 - Flooring and Floor Covering Contractors</fullName>
                </value>
                <value>
                    <fullName>C16 - Fire Protection Contractor</fullName>
                </value>
                <value>
                    <fullName>C17 - Glazing Contractor</fullName>
                </value>
                <value>
                    <fullName>C20 - Warm-Air Heating, Ventilating and Air-Conditioning Contractor</fullName>
                </value>
                <value>
                    <fullName>C21 - Building Moving/Demolition Contractor</fullName>
                </value>
                <value>
                    <fullName>C22 - Asbestos Abatement Contractor</fullName>
                </value>
                <value>
                    <fullName>C23 - Ornamental Metal Contractor</fullName>
                </value>
                <value>
                    <fullName>C27 - Landscaping Contractor</fullName>
                </value>
                <value>
                    <fullName>C28 - Lock and Security Equipment Contractor</fullName>
                </value>
                <value>
                    <fullName>C29 - Masonry Contractor</fullName>
                </value>
                <value>
                    <fullName>C31 - Construction Zone Traffic Control Contractor</fullName>
                </value>
                <value>
                    <fullName>C32 - Parking and Highway Improvement Contractor</fullName>
                </value>
                <value>
                    <fullName>C33 - Painting and Decorating Contractor</fullName>
                </value>
                <value>
                    <fullName>C34 - Pipeline Contractor</fullName>
                </value>
                <value>
                    <fullName>C35 - Lathing and Plastering Contractor</fullName>
                </value>
                <value>
                    <fullName>C36 - Plumbing Contractor</fullName>
                </value>
                <value>
                    <fullName>C38 - Refrigeration Contractor</fullName>
                </value>
                <value>
                    <fullName>C39 - Roofing Contractor</fullName>
                </value>
                <value>
                    <fullName>C42 - Sanitation System Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalParty_Expire_Date__c</fullName>
        <label>Contractor Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalParty_Issue_Date__c</fullName>
        <label>Contractor Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalParty_License_Number__c</fullName>
        <label>Contractor License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalParty_WC_Effective_Date__c</fullName>
        <label>Contractor WC Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalParty_WC_Expire_Date__c</fullName>
        <label>Contractor WC Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalParty_WC_Policy_Number__c</fullName>
        <label>Contractor WC Policy Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalParty_WC_insurer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contractor WC insurer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Contractor WC insurer)</relationshipLabel>
        <relationshipName>Contractor_WC_insurer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Party_Date__c</fullName>
        <label>Contractor Citation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Crime__c</fullName>
        <inlineHelpText>This indicates whether the Property Owner has been convicted of a financial crime.</inlineHelpText>
        <label>Financial Crime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foreclosure_Short_Sale_Deed_in_Lieu__c</fullName>
        <label>Foreclosure/Short Sale/Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Liability_Insurance_info__c</fullName>
        <label>General Liability Insurance info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <label>Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <label>License Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>current</fullName>
                </value>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <label>Litigation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MW_Installed_in_Yeare__c</fullName>
        <inlineHelpText>The last know MW installation number for the year referred to in MW Year</inlineHelpText>
        <label>MW Installed (for yr in MW Year)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MW_Year__c</fullName>
        <inlineHelpText>The year in which the MegaWatt installed was last recorded.</inlineHelpText>
        <label>MW Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if any of the marketing required fields needs more research.</inlineHelpText>
        <label>Needs Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_income_properties_owned__c</fullName>
        <label>Number of income properties owned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Official_Account_Name__c</fullName>
        <description>Not an acronym. Includes punctuation (-, etc.), suffix ( Inc., LLC, etc.). Often the same name as the headquarters.</description>
        <label>Official Account Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Out_of_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Entity_Type__c</fullName>
        <label>Owner Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual &amp; Family</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Member-Owned</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>REIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Portfolio_Size__c</fullName>
        <label>Owner Portfolio Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>2 - 5</fullName>
                </value>
                <value>
                    <fullName>6 - 10</fullName>
                </value>
                <value>
                    <fullName>11 - 25</fullName>
                </value>
                <value>
                    <fullName>More than 25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PACE_Friendly__c</fullName>
        <description>Determine if willing to work with PACE transactions</description>
        <label>PACE Friendly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_matched_Accounts__c</fullName>
        <label>Possible matched Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact at this account.</description>
        <label>Primary Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Specialty__c</fullName>
        <description>Primary property types this account works with.</description>
        <label>Property Specialty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture - General</fullName>
                </value>
                <value>
                    <fullName>Agriculture - Winery</fullName>
                </value>
                <value>
                    <fullName>Alternative - Club</fullName>
                </value>
                <value>
                    <fullName>Education - General</fullName>
                </value>
                <value>
                    <fullName>Education - Higher Edu</fullName>
                </value>
                <value>
                    <fullName>Education - K-12</fullName>
                </value>
                <value>
                    <fullName>Healthcare - General</fullName>
                </value>
                <value>
                    <fullName>Healthcare - MOB</fullName>
                </value>
                <value>
                    <fullName>Healthcare - Regional Hospital</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Boutique Hotel</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Casino</fullName>
                </value>
                <value>
                    <fullName>Hospitality - General</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Motel</fullName>
                </value>
                <value>
                    <fullName>Hospitality - Resort Hotel</fullName>
                </value>
                <value>
                    <fullName>Industrial - Cold Storage</fullName>
                </value>
                <value>
                    <fullName>Industrial - Distribution Center</fullName>
                </value>
                <value>
                    <fullName>Industrial - General</fullName>
                </value>
                <value>
                    <fullName>Industrial - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Industrial - MM Facility</fullName>
                </value>
                <value>
                    <fullName>Industrial - R&amp;D Flex</fullName>
                </value>
                <value>
                    <fullName>Industrial - Self Storage</fullName>
                </value>
                <value>
                    <fullName>Mixed-Use</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - General</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - High-Rise</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Mid-Rise</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Mixed Use</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Mobile Home Park</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Senior Living</fullName>
                </value>
                <value>
                    <fullName>Multi-Family - Student Housing</fullName>
                </value>
                <value>
                    <fullName>Office - General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Record_Search_Notes__c</fullName>
        <inlineHelpText>Notes on the Public Record Search</inlineHelpText>
        <label>Public Record Search Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Records_Search_Date__c</fullName>
        <inlineHelpText>This is the date that CleanFund conducts its public research search.</inlineHelpText>
        <label>Public Records Search Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Segment_Affiliation__c</fullName>
        <label>Segment Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AccTypeNew__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Segment_Affiliation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolarPACE_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SolarPACE Partner</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>